<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical" android:paddingLeft="30px" android:paddingRight="30px" android:paddingTop="10px">
    <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:text="@string/gamename" android:layout_marginBottom="40px"></TextView>
    <Button android:layout_height="wrap_content" 
    android:onClick="newGame" 
    android:id="@+id/button1" android:layout_width="match_parent" android:text="@string/newgame">
    </Button>
    <Button android:id="@+id/button2" 
    android:layout_height="wrap_content"
    android:layout_width="match_parent" android:text="@string/cont">
    </Button>
    <Button android:id="@+id/button3" 
    android:onClick="highscore"
    android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/highscore"></Button>
    <Button android:layout_height="wrap_content" 
    android:onClick="creds"
    android:id="@+id/button4" android:layout_width="match_parent" android:text="@string/creds"></Button>
    <Button android:layout_height="wrap_content" 
    android:onClick="exit"
    android:id="@+id/button5" android:layout_width="match_parent" android:text="@string/exit"></Button>
</LinearLayout>
