<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical" android:paddingLeft="30px" android:paddingRight="30px" android:paddingTop="10px">
    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gamename"></TextView>
    <TextView android:layout_height="wrap_content" android:text="@string/creds" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_marginTop="20px"></TextView>
    <TextView android:layout_height="wrap_content" android:text="@string/groupname" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_marginTop="20px"></TextView>
    <Button android:layout_marginTop="30px" android:onClick="back" android:layout_height="wrap_content" android:id="@+id/button1" android:text="@string/returnmain" android:layout_width="match_parent"></Button>
</LinearLayout>
